plugins {
    id 'java'
    id 'application'
    id 'org.openjfx.javafxplugin' version '0.1.0'
}

group = 'org.example'
version = '1.0-SNAPSHOT'

repositories {
    mavenCentral()
}

dependencies {
    testImplementation platform('org.junit:junit-bom:5.10.0')
    testImplementation 'org.junit.jupiter:junit-jupiter'
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(22)
    }
}

javafx {
    version = "21.0.5"
    modules = [ 'javafx.controls', 'javafx.fxml' ]
}

application {
    mainClass = 'at.ac.fhcampuswien.blackjack.gui.MainApp'
}

test {
    useJUnitPlatform()
}